--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,8 @@ button, input{
       transform: translate3d(0,0,0);
   }
 }
+@media screen and (max-width: 40rem) {
+  .title{
+    font-size: 2.2rem;
+  }
+}
