--- a/src/Components/Feed/FeedPhotos.module.css
+++ b/src/Components/Feed/FeedPhotos.module.css
@@ -37,10 +37,7 @@
 }
 @media(max-width: 40rem){
   .ulFeed{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
-  .ulFeed .imageDogsFeed:nth-child(4n+2){
-    grid-column: initial;
-    grid-row: initial;
-  }
+ 
 }
