--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
   font-size: 2.4rem;
   letter-spacing: .1rem;
   position: relative;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 .title span{
   position: absolute;
