--- a/src/Components/Feed/Modal.module.css
+++ b/src/Components/Feed/Modal.module.css
@@ -120,8 +120,8 @@
   .modalContainer{
     grid-template-columns: minmax(20rem, 40rem);
     grid-template-rows: auto;
-    /* height: auto; */
-    max-width: calc(100vh - 4rem);
+    height: auto;
+    max-height: calc(100vh - 4rem);
     overflow-y: auto;
   }
   .modalImg{
@@ -130,16 +130,17 @@
   .modalForm{
     padding: 1rem;
   }
+  .modalViews {
+    width: 15rem;
+    margin-bottom: 1rem;
+  }
   .modalSendMsg{
     display: flex;
-    flex-direction: column;
-    align-items: start;
+    align-items: center;
+    justify-content: left;
+    gap: 1rem;
   }
   .modalSendMsg textarea{
-    width: 14rem;
-  }
-  .modalViews {
-    width: 14rem;
-    margin-bottom: 1rem;
+    width: 12rem;
   }
 }
